# LangtonsAntGame

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  universe.txt
src/: Ant.hpp  FileHandler.hpp  Game.hpp  Universe.hpp
test/: AntTests.cpp  FileHandlerTests.cpp  GameTests.cpp  UniverseTests.cpp
